# djangonews-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cogs.py  main.py  migrate.py  pyproject.toml  schema.sql  summary.py  timezone_users.py  views.py
migrations/: 00_initial_migration.py  01_add_cache_and_reports_tables.py  02_add_bot_state_table.py  03_add_organization_column.py  README.md  __init__.py
scripts/: migrate.py
src/: __init__.py
src/bot/: __init__.py
src/bot/cogs/: automation.py  profile.py  reporting.py  volunteer.py
src/database/: migrations.py
src/ui/: __init__.py  calendar_view.py  date_picker.py  profile_modal.py  timezone_view.py
src/utils/: github.py  permissions.py  timezone.py
